--- a/package.json
+++ b/package.json
@@ -264,7 +264,7 @@
     "whatsapp-bot",
     "ibraah"
   ],
-  "author": "carl165",
+  "author": "carl24tech",
   "license": "ISC",
   "dependencies": {
     "@adiwajshing/keyed-db": "^0.2.4",
