--- a/set.env
+++ b/set.env
@@ -3,7 +3,7 @@ PREFIX="."
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
-BOT_NAME= "Cyberion-V1"
+BOT_NAME= "Cyberion V1"
 IMAGE_MENU= "https://telegra.ph/file/8607b7de6ec512c7886aa.jpg"
 NUMERO_OWNER= "254770954948"
 OWNER_NAME= "᚛Carl william᚜"
