--- a/set.env
+++ b/set.env
@@ -6,7 +6,7 @@ AUTO_DOWNLOAD_STATUS="no"
 BOT_NAME= "Cyberion V1"
 IMAGE_MENU= "https://telegra.ph/file/8607b7de6ec512c7886aa.jpg"
 NUMERO_OWNER= "254770954948"
-OWNER_NAME= "᚛Carl william᚜"
+OWNER_NAME= "᚛Carl William᚜"
 DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
 WARN_COUNT= ""
 OPENAI_API_KEY= ""
