--- a/app.json
+++ b/app.json
@@ -15241,7 +15241,7 @@
   "name":"Cyberion-Spark-X",
   "description":"Best whatsapp bot developed by Carl william",
   "keywords":["bot","node","baileys","whatsapp"],
-  "logo":"https://telegra.ph/file/0596b8d5a93154f1bca1d.jpg",
+  "logo":"https://i.imgur.com/THxMxIy.jpeg",
   "repository":"https://github.com/carl24tech/Cyberion-Spark-X",
   "succes_url":"/",
   "stack":"heroku-24",
