--- a/app.json
+++ b/app.json
@@ -15293,7 +15293,7 @@
      "BOT_MENU_LINKS" : {
     
       "description":"add one or many link for your bot menu  ; eg : url1,url2,url3.....",
-      "value":"https://telegra.ph/file/506033ba9c46afad117f8.jpg",
+      "value":"https://i.imgur.com/THxMxIy.jpeg",
       "required":false
        
      },
