--- a/set.env
+++ b/set.env
@@ -28,8 +28,8 @@ PREFIX="."
 PUBLIC_MODE='yes'
 AUTO_READ_STATUS="yes"
 AUTO_DOWNLOAD_STATUS="no"
-BOT_NAME= "Cyberion V1"
-IMAGE_MENU= "https://telegra.ph/file/8607b7de6ec512c7886aa.jpg"
+BOT_NAME= "Cyberion-Spark-X"
+IMAGE_MENU= "https://files.catbox.moe/b41oqk.mp4"
 NUMERO_OWNER= "254770954948"
 OWNER_NAME= "᚛Carl William᚜"
 DATABASE_URL= "postgresql://postgres:bKlIqoOUWFIHOAhKxRWQtGfKfhGKgmRX@viaduct.proxy.rlwy.net:47738/railway"
