--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,33 @@
-/carltech
-/node-cron 
-/carltech
-/Cyberion-Spark-X 
-/heroku.jid
-/npm servers
-/auto like status
-/auto read messages
-/anticlone
-/nlp Technologies 
-/Twilio API
-/heroku_antiban
+# Gradle files
+.gradle/
+build/
+
+# Local configuration file (sdk path, etc)
+local.properties
+
+# Log/OS Files
+*.log
+
+# Android Studio generated files and folders
+captures/
+.externalNativeBuild/
+.cxx/
+*.apk
+output.json
+
+# IntelliJ
+*.iml
+.idea/
+misc.xml
+deploymentTargetDropDown.xml
+render.experimental.xml
+
+# Keystore files
+*.jks
+*.keystore
+
+# Google Services (e.g. APIs or Firebase)
+google-services.json
+
+# Android Profiling
+*.hprof
