--- a/package.json
+++ b/package.json
@@ -172,3 +172,217 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+{
+  "name": "Buddy-XTR",
+  "version": "10.8.1",
+  "description": "Indomitable",
+  "main": "carl.js",
+  "type": "module",
+  "scripts": {
+    "start": "pm2 start carl.js --deep-monitoring --attach --name  Buddy-XTR",
+    "stop": "pm2 stop  Buddy-XTR",
+    "restart": "pm2 restart  Buddy-XTR"
+  },
+  "keywords": ["carl-tech", "whatsapp-bot", "whatsapp md bot"],
+  "author": "Buddy-XTR",
+  "license": "ISC",
+  "dependencies": {
+    "@whiskeysockets/baileys": "npm:@fizzxydev/baileys-pro@8.5.12",
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@google/generative-ai": "^0.9.0",
+    "@hapi/boom": "^10.0.1",
+    "@xaviabot/fb-downloader": "^1.0.14",
+    "acrcloud": "^1.4.0",
+    "api-dylux": "^1.8.3",
+    "adm-zip": "^0.5.16",
+    "aptoide-scraper": "^1.0.1",
+    "awesome-phonenumber": "^6.8.0",
+    "axios": "^1.6.8",
+    "chalk": "^5.3.0",
+    "child_process": "^1.0.2",
+    "crypto": "^1.0.1",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "ffmpeg": "^0.0.4",
+    "file-type": "^19.0.0",
+    "fluent-ffmpeg": "^2.1.3",
+    "megajs": "^1.1.0",
+    "fs": "^0.0.1-security",
+    "fs-extra": "^11.2.0",
+    "gifted-dls": "^1.3.0",
+    "google-it": "^1.6.4",
+    "human-readable": "^0.2.1",
+    "jimp": "^0.16.13",
+    "jpeg-js": "^0.4.4",
+    "jsqr": "^1.4.0",
+    "libphonenumber": "^0.0.10",
+    "moment-timezone": "^0.5.45",
+    "node-cache": "^5.1.2",
+    "node-cron": "^3.0.3",
+    "node-fetch": "^3.3.2",
+    "node-os-utils": "^1.3.7",
+    "node-webpmux": "^3.2.0",
+    "os": "^0.1.2",
+    "pdfkit": "^0.15.0",
+    "pino": "^8.20.0",
+    "pm2": "^5.4.0",
+    "proto": "^1.0.19",
+    "qrcode": "^1.5.3",
+    "qrcode-terminal": "^0.12.0",
+    "readline": "^1.3.0",
+    "remove.bg": "^1.3.0",
+    "stream": "^0.0.3",
+    "tesseract.js": "^5.1.0",
+    "translate-google-api": "^1.0.4",
+    "url": "^0.11.4",
+    "uuid": "^9.0.1",
+    "wasitech": "npm:@distube/ytdl-core",
+    "yt-search": "^2.11.0"
+  }
+  }
