--- a/.env
+++ b/.env
@@ -1,14 +1,11 @@
-SESSION_ID="Buddy;;;SmoBnSZb#1OMHQXLckgYIwCEZUio9NZIa33W1QUiL4ONAzFDcsEQ"
-AUTO_READ_STATUS=true
-STATUS_READ_MSG="*Status Seen By Buddy 🕵️*"
-AUTO_STATUS_REPLY=false
-AUTO_REJECT_CALLS=false
-MODE="public"
+SESSION_ID="Replace here with your session ID"
+AUTO_STATUS_SEEN=true
+AUTO_STATUS_REACT=true
+REJECT_CALL=false
+MODE=public
 WELCOME=false
-AUTO_READ_MESSAGES=false
-AUTO_TYPING=false
-OWNER_NAME="Carltech"
-OWNER_NUMBER="254740271632"
+AUTO_READ=false
+AUTO_TYPING=true
 AUTO_RECORDING=false
 ALWAYS_ONLINE=false
 AUTO_BLOCK=true
