--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SESSION_ID="Replace here with your session ID"
 AUTO_STATUS_SEEN=true
 OWNER_NUMBER="your number without +"
-ANTI_TEXT=true
+ANTI_TEXT=false
 ANTI_WORD=true
 REJECT_CALL=false
 MODE=public
