--- a/app.json
+++ b/app.json
@@ -62,6 +62,11 @@
       "required": false,
       "value": "true"
     },
+    "AUTO_STATUS_REACT": {
+      "description": "Enable bot to like statuses (true/false)",
+      "required": false,
+      "value": "true"
+    },
     "AUTO_BLOCK": {
       "description": "Enable bot to auto-block specific numbers (true/false)",
       "required": false,
