--- a/app.json
+++ b/app.json
@@ -57,6 +57,16 @@
       "required": false,
       "value": "false"
     },
+    "AUTO_BIO": {
+      "description": "Enable bot to automatically change your bio (true/false)",
+      "required": false,
+      "value": "true"
+    },
+    "ANTI_WORD": {
+      "description": "If enabled,the bot will automatically block abusive words(true/false)",
+      "required": false,
+      "value": "false"
+    },
     "AUTO_STATUS_SEEN": {
       "description": "Enable bot to view statuses (true/false)",
       "required": false,
