--- a/app.json
+++ b/app.json
@@ -63,9 +63,14 @@
       "value": "true"
     },
     "ANTI_WORD": {
-      "description": "If enabled,the bot will automatically block abusive words(true/false)",
+      "description": "If enabled,the bot will auto-block abusive words(true/false)",
       "required": false,
       "value": "false"
+    },
+    "ANTI_DELETE": {
+      "description": "If enabled,the bot will auto-recover deleted messages(true/false)",
+      "required": false,
+      "value": "true"
     },
     "AUTO_STATUS_SEEN": {
       "description": "Enable bot to view statuses (true/false)",
