--- a/.env
+++ b/.env
@@ -2,6 +2,7 @@ SESSION_ID="Replace here with your session ID"
 AUTO_STATUS_SEEN=true
 OWNER_NUMBER="your number without +"
 ANTI_WORD=true
+ANTI_DELETE=true
 AUTO_BIO=true
 REJECT_CALL=false
 MODE=public
